crates/noseyparker-cli/tests/help/snapshots/test_noseyparker__help__help_short_nogithub-2.snap
---
source: crates/noseyparker-cli/tests/help/mod.rs
expression: stdout
---
Nosey Parker is a command-line program that finds secrets and sensitive information in textual data
and Git history.

Usage: noseyparker [OPTIONS] <COMMAND>

Commands:
  scan         Scan content for secrets
  summarize    Summarize scan findings
  report       Report detailed scan findings
  datastore    Manage datastores
  rules        Manage rules and rulesets
  annotations  Manage annotations (experimental)
  generate     Generate Nosey Parker release assets
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help (see more with '--help')
  -V, --version  Print version

Global Options:
  -v, --verbose...       Enable verbose output
  -q, --quiet            Suppress non-error feedback messages
      --color <MODE>     Enable or disable colored output [default: auto] [possible values: auto,
                         never, always]
      --progress <MODE>  Enable or disable progress bars [default: auto] [possible values: auto,
                         never, always]
      --ignore-certs     Ignore validation of TLS certificates
