crates/noseyparker-cli/tests/help/snapshots/test_noseyparker__help__version_command.snap
---
source: crates/noseyparker-cli/tests/test_noseyparker_help.rs
expression: status
---
exit status: 2
