crates/noseyparker-cli/tests/help/snapshots/test_noseyparker__help__version_long-2.snap
---
source: crates/noseyparker-cli/tests/help/mod.rs
expression: stdout
---
noseyparker 0.21.0

Build Configuration:

    Build Timestamp:    <PLACEHOLDER>

    Commit Timestamp:   <PLACEHOLDER>
    Commit Branch:      <PLACEHOLDER>
    Commit SHA:         <PLACEHOLDER>

    Cargo Features:     <PLACEHOLDER>
    Debug:              <PLACEHOLDER>
    Optimization:       <PLACEHOLDER>
    Target Triple:      <PLACEHOLDER>

Build System:

    OS:                 <PLACEHOLDER>
    OS Version:         <PLACEHOLDER>

    CPU Vendor:         <PLACEHOLDER>
    CPU Brand:          <PLACEHOLDER>
    CPU Cores:          <PLACEHOLDER>

    rustc Version:      <PLACEHOLDER>
    rustc Channel:      <PLACEHOLDER>
    rustc Host Triple:  <PLACEHOLDER>
    rustc Commit Date:  <PLACEHOLDER>
    rustc Commit SHA:   <PLACEHOLDER>
    rustc LLVM Version: <PLACEHOLDER>
