crates/noseyparker-cli/tests/help/snapshots/test_noseyparker__help__version_short-2.snap
---
source: crates/noseyparker-cli/tests/help/mod.rs
expression: stdout
---
noseyparker 0.17.0-dev

